# boostasiosctp

boost/asio_sctp/: sctp_socket_acceptor.hpp  sctp_socket_acceptor_service.hpp  sctp_stream_socket.hpp  sctp_stream_socket_service.hpp
boost/asio_sctp/detail/: sctp_socket_ops.hpp  sctp_socket_types.hpp
boost/asio_sctp/ip/: sctp.hpp
libs/asio_sctp/test/: CMakeLists.txt  Makefile  is_write_buffered.cpp
